version/0.16/_sources/api/ansys/geometry/core/_grpc/_services/base/curves/GRPCCurvesService.rst.txt






:class:`GRPCCurvesService`
==========================


.. py:class:: ansys.geometry.core._grpc._services.base.curves.GRPCCurvesService(channel: grpc.Channel)

   Bases: :py:obj:`abc.ABC`


   
   Curves service for gRPC communication with the Geometry server.


   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!







.. py:currentmodule:: GRPCCurvesService

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~revolve_edges`
            - Revolve edges around an axis to create a surface of revolution.
          * - :py:attr:`~intersect_curves`
            - Get intersection points of curves.
          * - :py:attr:`~intersect_curve_and_surface`
            - Get intersection points of a curve and surface.
          * - :py:attr:`~get`
            - Get curve object from id.
          * - :py:attr:`~get_interval`
            - Get the parametric interval (start and end parameter values) of a curve.










Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.base.curves import GRPCCurvesService



Method detail
-------------

.. py:method:: revolve_edges(**kwargs) -> dict
   :abstractmethod:


   
   Revolve edges around an axis to create a surface of revolution.
















   ..
       !! processed by numpydoc !!

.. py:method:: intersect_curves(**kwargs) -> dict
   :abstractmethod:


   
   Get intersection points of curves.
















   ..
       !! processed by numpydoc !!

.. py:method:: intersect_curve_and_surface(**kwargs) -> dict
   :abstractmethod:


   
   Get intersection points of a curve and surface.
















   ..
       !! processed by numpydoc !!

.. py:method:: get(**kwargs) -> dict
   :abstractmethod:


   
   Get curve object from id.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_interval(**kwargs) -> dict
   :abstractmethod:


   
   Get the parametric interval (start and end parameter values) of a curve.
















   ..
       !! processed by numpydoc !!




